# POGG_src

./: .gitignore  .readthedocs.yaml  future_work.txt  pyproject.toml
GG/: composition_library.py  error_analysis.py  graph_to_mrs.py  graph_util.py  main.py  mrs_algebra.py  mrs_util.py  todo.txt
POGG/: composition_library.py  data_regularization.py  graph_to_mrs.py  main.py  mrs_algebra.py  mrs_util.py
POGG_org/: doc_test.py  pyproject.toml
POGG_unorg/: README.md
POGG_unorg/POGG/: error_analysis.py  evaluation.py  graph_util.py  main.py  mrs_algebra.py  mrs_util.py
POGG_unorg/POGG/semantic_constructions/: base.py  perplexity.py
POGG_unorg/archived/: main_archived.py  output_mrs_with_ace.py
POGG_unorg/data_prep/: depth_1_annotation.py  graph_builder.py  lexicon_builder.py  lexicon_helper.py
POGG_unorg/examples/: composition_examples.py
POGG_unorg/sandbox/: main_minimal.py
POGG_unorg/tests/semantic_constructions/: base_test.py
archived/: main_archived.py  mrs_algebra_old.py  perplexity_parser.py  sentences.txt
brainstorming/: main_overhaul.py
config_data/: comp_to_graph_relations.json  global_config.yml
data_prep/: graph_builder.py  lexicon_builder.py  lexicon_helper.py
docs/: architecture.txt  todo.txt
docs/source/: conf.py  index.rst
examples/: composition_examples.py  graph_to_mrs_examples.py  mrs_dev.txt  sandbox.py
sandbox/: ACE_sandbox.py  data_sandbox.py  main_minimal.py  pogg_objects.py  poggjects_sandbox.py
tests/: composition_test.py
tests/semantic_constructions/hand_validated_SEMENT_strings/: in_SEMENT.txt  (+1 more)
(+5 files in other folders)
